fix(core-price-lockup): fixing horizontal alignment issue (#836)
* fix(core-price-lockup): fixing horizontal alignment issue

wrapped a div with inline-block and alignment left to account FlexGrid Row horizontal alignment changes

* fix(core-price-lockup): adjustments to horizontal alignment

removed extra div

* style(core-price-lockup): removing inline-block

removing inline-block and updating screenshots and tests

--- a/packages/PriceLockup/PriceLockup.modules.scss
+++ b/packages/PriceLockup/PriceLockup.modules.scss
@@ -1,6 +1,10 @@
 @import '~@tds/core-responsive/responsive';
 @import '../../shared/scss/typography';
 
+.wrapperAlignment {
+  text-align: left;
+}
+
 .priceValueSign {
   line-height: 1;
 }
